:lipstick: Fix styling on verify email button in user profile to prevent text wrapping

--- a/src/app/cube/user-profile/user-information/user-information.component.scss
+++ b/src/app/cube/user-profile/user-information/user-information.component.scss
@@ -72,7 +72,7 @@
 }
 
 .verify-email.button {
-  max-width: 175px;
+  display: inline-block;
   margin: 10px auto;
 }
 
